--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "test": "(cd tests; parcel index.html --open)",
-    "build": "(cd src; NODE_ENV=production parcel build index.html --out-dir=../docs)"
+    "build": "(cd src; NODE_ENV=production parcel build index.html --public-url=/app-textarea --out-dir=../docs)"
   },
   "author": "Zoran Obradović, Ljudmila.org",
   "license": "ISC",
@@ -22,8 +22,5 @@
   "private": true,
   "dependencies": {
     "@websh/web-shell-app": "^0.1.1"
-  },
-  "devDependencies": {
-    "cssnano": "^4.1.10"
   }
 }
